# data-app-js

./: Dockerfile  README.md  app.py  package.json  pyproject.toml  run.sh  server.js  test-config.json  uv.toml
backend/: app.py  pyproject.toml
frontend/: package.json  server.js
keboola-config/: setup.sh
keboola-config/nginx/sites/: app.conf
keboola-config/supervisord/: app.conf  node.conf  python.conf
keboola-config/supervisord/services/: worker.conf
