[project]
name            = "titanic-js-data-app"
version         = "1.0.0"
description     = "Titanic Data App — FastAPI + vanilla JS"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pandas==2.2.2",
    "keboola-storage-client==6.2.0",
]

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.keboola]
entrypoint = "uvicorn app:app --host 0.0.0.0 --port 8080"